--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
             <h2 class="fases-titulo">Fase 1</h2>
             <p class="fechas-fases">DICIEMBRE 15-30</p>
             <img class="imagenes-fases" src="fase1.png" alt="Fase 1 TCP">
-            <button class="btn-comprar-entrada">RESERVAR ENTRADA</button>
+            <button class="btn-comprar-entrada">COMPRAR ENTRADA</button>
         </div>
         <div class="contenedor-fases" id="faseDos">
             <h2 class="fases-titulo">Fase 2</h2>
             <p class="fechas-fases">ENERO 1 - FEBRERO 14</p>
             <img class="imagenes-fases" src="fase2.png" alt="Fase 2 TCP">
-            <button class="btn-comprar-entrada">RESERVAR ENTRADA</button>
+            <button class="btn-comprar-entrada">COMPRAR ENTRADA</button>
         </div>
         <div class="contenedor-fases" id="faseTres">
             <h2 class="fases-titulo">Fase 3</h2>
             <p class="fechas-fases">FEBRERO 15 - ABRIL 10</p>
             <img class="imagenes-fases" src="fase3.png" alt="Fase 3 TCP">
-            <button class="btn-comprar-entrada">RESERVAR ENTRADA</button>
+            <button class="btn-comprar-entrada">COMPRAR ENTRADA</button>
         </div>
     </section>
 </body>
