--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>TheChillParty III</h1>
             <h2>Compra tu entrada</h2>
             <h3>5% de descuento en entradas</h3>
-            <a class="ir-a-entradas" href="#sectionEntradas">Reserva tu entrada</a>
+            <a class="ir-a-entradas" href="#sectionEntradas">Comprar entrada</a>
         </div>
     </section>
     <section class="info-de-la-party">
